Updated landing page, listing component and datatable, car service and http interceptor

--- a/cazoo-frontend/src/app/app.component.html
+++ b/cazoo-frontend/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<div class="app-container">
+  <app-header [headerType]="headerType"></app-header>
+  <div class="main-content">
+    <div class="router-outlet">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+
+  <app-footer></app-footer>
+</div>
