--- a/cazoo-frontend/src/app/modules/car-listing/car-listing.component.html
+++ b/cazoo-frontend/src/app/modules/car-listing/car-listing.component.html
@@ -1,2 +1,5 @@
-<app-header></app-header>
-<app-footer></app-footer>
+<div class="car-listing">
+  <div class="car-listing-datatable">
+    <app-datatable></app-datatable>
+  </div>
+</div>
