--- a/cazoo-frontend/src/app/shared/components/footer/footer.component.html
+++ b/cazoo-frontend/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer-container">
-  <span>João Martinho</span>
-  <span>Cazoo Code Challange 2021</span>
+<footer id="footer" class="footer-container">
+  <span id="footer-name">João Martinho</span>
+  <span id="footer-description">Cazoo Code Challange 2021</span>
 </footer>
