--- a/cazoo-frontend/src/app/app.component.scss
+++ b/cazoo-frontend/src/app/app.component.scss
@@ -1,1 +1,15 @@
+.app-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 
+.main-content {
+  width: 100%;
+  height: 100%;
+  flex: 1;
+}
+
+.router-outlet {
+  position: relative;
+}
