--- a/cazoo-frontend/src/app/modules/landing/landing.component.html
+++ b/cazoo-frontend/src/app/modules/landing/landing.component.html
@@ -1,23 +1,15 @@
-<app-header [type]="'landing'"></app-header>
-
-<section class="landing-content">
-  <h1 class="heading-primary">The better way to buy your next car</h1>
-  <div class="info-action-container">
-    <p class="info">
-      With Cazoo, you can buy, finance or subscribe to your next car fully
-      online from the comfort of your sofa. As we own all our cars, quality
-      comes guaranteed. <br />Browse our wide range of cars available for
-      delivery or collection in as little as 72 hours.
+<section id="landing " class="landing">
+  <h1 id="landing-heading" class="landing-heading heading-primary">The better way to buy your next car</h1>
+  <div class="landing-content">
+    <p id="landing-content-info" class="landing-content-info">
+      With Cazoo, you can buy, finance or subscribe to your next car fully online from the comfort of your sofa. As we
+      own all our cars, quality comes guaranteed. <br />
+      Browse our wide range of cars available for delivery or collection in as little as 72 hours.
     </p>
-    <div class="search-button-container">
-      <a
-        routerLink="/car-listing"
-        type="button"
-        class="btn btn--primary btn-text"
+    <div id="landing-content-action" class="landing-content-action">
+      <a id="action-listing-button" routerLink="/car-listing" type="button" class="btn btn-primary btn-text"
         >Search all cars</a
       >
     </div>
   </div>
 </section>
-
-<app-footer></app-footer>
