--- a/cazoo-frontend/src/app/shared/components/footer/footer.component.scss
+++ b/cazoo-frontend/src/app/shared/components/footer/footer.component.scss
@@ -1,12 +1,9 @@
-@import "../../../../styles/styles.scss";
+@import '../../../../styles/styles.scss';
 
 .footer-container {
-  height: 2vh;
-  position: fixed;
-  bottom: 0;
   background-color: $color-tertiary;
   display: flex;
   justify-content: space-between;
-  padding: 0 5px;
+  padding: 0 0.5rem;
   width: 100%;
 }
