--- a/cazoo-frontend/src/styles/abstracts/_variables.scss
+++ b/cazoo-frontend/src/styles/abstracts/_variables.scss
@@ -3,12 +3,13 @@ $color-primary: #df4e3c;
 $color-primary-dark: #c33b2a;
 
 $color-secondary: #282842;
-$color-secondary: #0d0d1a;
+$color-secondary-dark: #0d0d1a;
 
 $color-tertiary: rgb(191, 211, 197);
 
-$color-grey-light: #bfd3c5;
-$color-grey: #696868;
+$color-grey-light: rgb(244, 246, 245);
+$color-grey: rgb(69, 68, 68);
+$color-grey-dark: #454444;
 
 $color-background: rgb(244, 246, 245);
 
