--- a/cazoo-frontend/src/styles/abstracts/_variables.scss
+++ b/cazoo-frontend/src/styles/abstracts/_variables.scss
@@ -5,16 +5,20 @@ $color-primary-dark: #c33b2a;
 $color-secondary: #282842;
 $color-secondary-dark: #0d0d1a;
 
-$color-tertiary: rgb(191, 211, 197);
+$color-tertiary: #bfd3c5;
 
-$color-grey-light: rgb(244, 246, 245);
-$color-grey: rgb(69, 68, 68);
+$color-grey-light: #f4f6f5;
+$color-grey: #979797;
 $color-grey-dark: #454444;
+$color-grey-darker: #2c2a2a;
 
-$color-background: rgb(244, 246, 245);
+$color-background: #f4f6f5;
 
 $color-white: #ffff;
 $color-black: #000;
+
+$color-alert-red: #e03d3db9;
+$color-alert-green: #88bd88bb;
 
 /* Font Variables */
 $default-font-size: 1.6rem;
