--- a/cazoo-frontend/src/app/app.component.scss
+++ b/cazoo-frontend/src/app/app.component.scss
@@ -1,5 +1,7 @@
+@import '../styles/styles.scss';
+
 .app-container {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -10,6 +12,21 @@
   flex: 1;
 }
 
-.router-outlet {
-  position: relative;
+::ng-deep snack-bar-container.mat-snack-bar-container {
+  background-color: $color-grey;
+  max-width: 80vw;
+  border-radius: 1rem;
+  margin: 3.6rem;
+  color: white;
+  &.notification-success {
+    background-color: $color-alert-green;
+  }
+  &.notification-error {
+    background-color: $color-alert-red;
+  }
+
+  .mat-simple-snackbar {
+    font-family: 'ArchiaBold', sans-serif;
+    justify-content: center;
+  }
 }
