--- a/cazoo-frontend/src/app/modules/car-details/car-details-edit/car-details-edit.component.html
+++ b/cazoo-frontend/src/app/modules/car-details/car-details-edit/car-details-edit.component.html
@@ -2,83 +2,93 @@
   <div class="car-details-edit">
     <form [formGroup]="carForm" (ngSubmit)="onSubmit()">
       <div class="car-form-container">
-        <!-- Maker Input Field-->
         <div class="form-group form-labels-container">
-          <div class="form-group">
-            <label required for="maker">Maker</label>
-            <select class="custom-select" (change)="onSelectCarMaker()" formControlName="maker">
-              <option value=""></option>
-              <option *ngFor="let maker of makerSelection" [ngValue]="maker.name">{{ maker.name }}</option>
-            </select>
+          <!-- Maker Input Field-->
+          <div class="form-group-wrapper">
+            <div class="form-group">
+              <label required for="maker">Maker</label>
+              <select class="custom-select" (change)="onSelectCarMaker()" formControlName="maker">
+                <option label=""></option>
+                <option *ngFor="let maker of makerSelection" [ngValue]="maker.name">{{ maker.name }}</option>
+              </select>
+            </div>
             <p *ngIf="hasControlError('maker', ['required'])" class="form-group-error-message">Required Field</p>
           </div>
-
           <!-- Model Input Field-->
-          <div class="form-group">
-            <label required for="model">Model </label>
-            <select class="custom-select" (change)="onSelectCarModel()" formControlName="model">
-              <option value=""></option>
-              <option *ngFor="let model of modelSelection" [ngValue]="model.name">
-                {{ model.name }}
-              </option>
-            </select>
+          <div class="form-group-wrapper">
+            <div class="form-group">
+              <label required for="model">Model </label>
+              <select class="custom-select" (change)="onSelectCarModel()" formControlName="model">
+                <option value=""></option>
+                <option *ngFor="let model of modelSelection" [ngValue]="model.name">
+                  {{ model.name }}
+                </option>
+              </select>
+            </div>
             <p *ngIf="hasControlError('model', ['required'])" class="form-group-error-message">Required Field</p>
           </div>
 
           <!-- Year Input Field-->
-          <div class="form-group">
-            <label required for="year">Year </label>
-            <input id="year" type="text" formControlName="year" maxlength="4" />
-
+          <div class="form-group-wrapper">
+            <div class="form-group">
+              <label required for="year">Year </label>
+              <input id="year" type="text" formControlName="year" maxlength="4" />
+            </div>
             <p *ngIf="hasControlError('year', ['required'])" class="form-group-error-message">Required Field</p>
-
             <p *ngIf="hasControlError('year', ['pattern', 'min', 'max'])" class="form-group-error-message">
               1970 > Year < Current Year
             </p>
-
             <p *ngIf="carForm.controls['year'].errors" class="form-group-error-message"></p>
           </div>
 
           <!-- Color Input Field-->
-          <div class="form-group">
-            <label required for="color">Color </label>
-            <select class="custom-select" formControlName="color">
-              <option value=""></option>
-              <option *ngFor="let color of colorSelection" [ngValue]="color">
-                {{ color }}
-              </option>
-            </select>
+          <div class="form-group-wrapper">
+            <div class="form-group">
+              <label required for="color">Color </label>
+              <select class="custom-select" formControlName="color">
+                <option value=""></option>
+                <option *ngFor="let color of colorSelection" [ngValue]="color">
+                  {{ color }}
+                </option>
+              </select>
+            </div>
             <p *ngIf="hasControlError('color', ['required'])" class="form-group-error-message">Required Field</p>
           </div>
 
           <!-- Subscription Price Input Field-->
-          <div class="form-group">
-            <label required for="subscriptionPrice"
-              >Subscription Price <label class="inner-label">(€/Month)</label></label
-            >
-            <input id="subscriptionPrice" type="text" formControlName="subscriptionPrice" maxlength="6" />
-
+          <div class="form-group-wrapper">
+            <div class="form-group">
+              <label required for="subscriptionPrice"
+                >Subscription Price <label class="inner-label">(€/Month)</label></label
+              >
+              <input id="subscriptionPrice" type="text" formControlName="subscriptionPrice" maxlength="6" />
+            </div>
             <ng-container *ngIf="carForm.controls['subscriptionPrice'].touched">
               <p *ngIf="carForm.controls['subscriptionPrice'].errors?.required" class="form-group-error-message">
                 Required Field
               </p>
-              <p *ngIf="hasControlError('subscriptionPrice', ['pattern'])" class="form-group-error-message">
-                Invalid number
-              </p>
-              <p *ngIf="hasControlError('subscriptionPrice', ['min'])" class="form-group-error-message">
-                Value must be greater than 0
+              <p *ngIf="hasControlError('subscriptionPrice', ['pattern', 'min'])" class="form-group-error-message">
+                Value must be a number and greater than 0
               </p>
             </ng-container>
           </div>
 
           <!-- Availability Input Field-->
-          <div class="form-group">
-            <label required for="availableFrom">Available From </label>
-            <input matInput [matDatepicker]="picker" formControlName="availableFrom" placeholder="dd/MM/YYYY" />
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
+          <div class="form-group-wrapper">
+            <div class="form-group">
+              <label required for="availableFrom">Available From </label>
+              <input
+                matInput
+                [matDatepicker]="picker"
+                [min]="startDate"
+                formControlName="availableFrom"
+                placeholder="dd/MM/YYYY"
+              />
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker [startAt]="startDate"></mat-datepicker>
+            </div>
             <p
-              *ngIf="carForm.controls['availableFrom'].touched && carForm.controls['availableFrom'].errors?.required"
+              *ngIf="this.carForm.controls.availableFrom.touched && carForm.controls.availableFrom.errors"
               class="form-group-error-message"
             >
               Incorrect Date Format (dd/MM/YYYY)
@@ -86,52 +96,60 @@
           </div>
 
           <!-- Fuel Type Input Field-->
-          <div class="form-group">
-            <label for="fuelType">Fuel Type</label>
-            <select class="custom-select" formControlName="fuelType">
-              <option value=""></option>
-              <option *ngFor="let fuelType of fuelTypeSelection" [ngValue]="fuelType">
-                {{ fuelType }}
-              </option>
-            </select>
+          <div class="form-group-wrapper">
+            <div class="form-group">
+              <label for="fuelType">Fuel Type</label>
+              <select class="custom-select" formControlName="fuelType">
+                <option value=""></option>
+                <option *ngFor="let fuelType of fuelTypeSelection" [ngValue]="fuelType">
+                  {{ fuelType }}
+                </option>
+              </select>
+            </div>
           </div>
           <!-- Mileage Input Field-->
-          <div class="form-group">
-            <label for="mileage">Mileage <label class="inner-label">(Km)</label></label>
-            <input
-              id="mileage"
-              type="text"
-              formControlName="mileage"
-              [value]="carForm.get('mileage')?.value"
-              maxlength="7"
-            />
-            <p *ngIf="hasControlError('year', ['pattern'])" class="form-group-error-message">Invalid number</p>
+          <div class="form-group-wrapper">
+            <div class="form-group">
+              <label for="mileage">Mileage <label class="inner-label">(Km)</label></label>
+              <input
+                id="mileage"
+                type="text"
+                formControlName="mileage"
+                [value]="carForm.get('mileage')?.value"
+                maxlength="7"
+              />
+            </div>
+            <p *ngIf="hasControlError('mileage', ['pattern'])" class="form-group-error-message">Invalid number</p>
           </div>
 
           <!-- Transmission Input Field-->
-          <div class="form-group">
-            <label for="transmission">Transmission</label>
-            <select class="custom-select" formControlName="transmission">
-              <option value=""></option>
-              <option *ngFor="let transmission of transmissionSelection" [ngValue]="transmission">
-                {{ transmission }}
-              </option>
-            </select>
+          <div class="form-group-wrapper">
+            <div class="form-group">
+              <label for="transmission">Transmission</label>
+              <select class="custom-select" formControlName="transmission">
+                <option value=""></option>
+                <option *ngFor="let transmission of transmissionSelection" [ngValue]="transmission">
+                  {{ transmission }}
+                </option>
+              </select>
+            </div>
           </div>
 
-          <div class="form-group">
-            <label class="control-label" formControlLabel="seats" for="seats">Seats</label>
-            <input id="seats" name="seats" type="text" formControlName="seats" maxlength="3" />
-            <p *ngIf="hasControlError('seats', ['pattern'])" class="form-group-error-message">Invalid number</p>
-            <p *ngIf="hasControlError('seats', ['min'])" class="form-group-error-message">
-              Value must be numeric and greater than 0
+          <!-- Seats Input Field-->
+          <div class="form-group-wrapper">
+            <div class="form-group">
+              <label class="control-label" formControlLabel="seats" for="seats">Seats</label>
+              <input id="seats" name="seats" type="text" formControlName="seats" maxlength="3" />
+            </div>
+            <p *ngIf="hasControlError('seats', ['pattern', 'min'])" class="form-group-error-message">
+              Value must be a number and greater than 0
             </p>
           </div>
         </div>
       </div>
       <div class="search-button-container">
-        <button type="submit" class="btn btn-primary btn-text">Submit</button>
         <button routerLink="/car-listing" type="button" class="btn btn-secondary btn-text">Cancel</button>
+        <button type="submit" class="btn btn-primary btn-text">Submit</button>
       </div>
     </form>
   </div>
