--- a/cazoo-frontend/src/app/shared/components/footer/footer.component.scss
+++ b/cazoo-frontend/src/app/shared/components/footer/footer.component.scss
@@ -1,9 +1,17 @@
 @import '../../../../styles/styles.scss';
 
 .footer-container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
   background-color: $color-tertiary;
   display: flex;
   justify-content: space-between;
-  padding: 0 0.5rem;
   width: 100%;
+  align-items: center;
+  padding: 0 0.6rem;
+
+  span {
+    font-size: 1rem;
+  }
 }
