--- a/cazoo-frontend/src/app/modules/car-details/car-details.component.html
+++ b/cazoo-frontend/src/app/modules/car-details/car-details.component.html
@@ -68,7 +68,7 @@
             alt="Car Preview"
           />
           <div class="car-details-button-return">
-            <a routerLink="/car-listing" type="button" class="btn btn-secondary btn-text btn-return"
+            <a id="button-return" routerLink="/car-listing" type="button" class="btn btn-secondary btn-text btn-return"
               >Return to listing</a
             >
           </div>
