--- a/cazoo-frontend/src/app/modules/car-details/car-details-edit/car-details-edit.component.scss
+++ b/cazoo-frontend/src/app/modules/car-details/car-details-edit/car-details-edit.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/styles.scss';
+@import '../../../../styles/abstracts/variables';
 
 .form-container {
   display: flex;
@@ -90,6 +90,7 @@ fieldset {
   background-color: $color-grey-light;
   font-family: 'ArchiaSemiBold', sans-serif;
   display: flex;
+
   label {
     margin-top: 1rem;
     height: 4rem;
@@ -112,7 +113,7 @@ fieldset {
   margin-left: -4rem;
 
   @media screen and (max-width: 689px) {
-    margin-top: 0px;
+    margin-top: 0;
   }
 }
 
@@ -150,7 +151,7 @@ fieldset {
       font-family: 'ArchiaRegular', sans-serif;
       font-size: 1.5rem;
       color: $color-grey-dark;
-      margin-right: 0px;
+      margin-right: 0;
     }
   }
 
@@ -159,11 +160,11 @@ fieldset {
     position: absolute;
     font-size: 1.3rem;
     color: $color-alert-red;
-    right: 50px;
-    top: 40px;
+    right: 5rem;
+    top: 4rem;
 
     @media screen and (max-width: 689px) {
-      left: 0px;
+      left: 0;
       top: 8.2rem;
     }
   }
