--- a/cazoo-frontend/src/app/shared/components/footer/footer.component.scss
+++ b/cazoo-frontend/src/app/shared/components/footer/footer.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/styles.scss';
+@import '../../../../styles/abstracts/variables';
 
 .footer-container {
   position: fixed;
